--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
       "grade": "stable"
     }
   },
-  "dependencies": {
-    "sudo-prompt": "^9.2.1"
-  },
+  "dependencies": {},
   "devDependencies": {
     "electron": "^18.0.0",
     "electron-builder": "^23.0.3"
